--- a/Frontend/src/index.html
+++ b/Frontend/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>InfyAirlines</title>
+  <title>XYZ Airlines</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -13,4 +13,6 @@
 <body class="mat-typography">
   <app-root></app-root>
 </body>
+<!-- Add this before closing body tag -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </html>
